# psychec

./: .gitignore  3rdParty.txt  CMakeLists.txt  Cnippet.cpp  CompileTests.sh  Config.h  CreateTestCase.sh  Doxyfile  FixExpected.py  LICENSE  Licensing notes.txt  Main.cpp  README.md  Reconstruct.py  TestSuiteRunner.cpp  _config.yml  cnip.sh  compile_all.sh  index.md  reconstruct.py  test_compilability.py  test_infer_and_compile.sh  test_infer_and_compile_cnip.sh
C/: API.h  APIFwds.h  CMakeLists.txt  Compilation.cpp  Compilation.h  Fwds.h  LanguageDialect.cpp  LanguageDialect.h  LanguageExtensions.cpp  LanguageExtensions.h  List.h  MemoryPool.cpp  MemoryPool.h  SemanticModel.cpp  SemanticModel.h  SyntaxTree.cpp  SyntaxTree.h  Unparser.cpp  Unparser.h
C/binder/: Binder.cpp  Binder.h  Binder_Declarators.cpp  Binder_End.cpp  Binder_Specifiers.cpp  Binder__MACROS__.inc  ConstraintsInDeclarations.cpp  ConstraintsInDeclarations.h  ConstraintsInDeclarators.cpp  ConstraintsInDeclarators.h  ConstraintsInTypeSpecifiers.cpp  ConstraintsInTypeSpecifiers.h  DeclarationResolver.cpp  DeclarationResolver.h  DiagnosticsReporter_Binder.cpp  NameSpace.h  NameSpaceKind.h  NameSpaces.cpp  NameSpaces.h  Scope.cpp  Scope.h  ScopeKind.h  Scope_Block.cpp  Scope_Block.h  Scope_File.cpp  Scope_File.h  Scope_Function.cpp  Scope_Function.h  Scopes.h  SemanticsOfTypeQualifiers.cpp  SemanticsOfTypeQualifiers.h  Semantics_Declarators.cpp  Semantics_Declarators.h  Semantics_TypeQualifiers.cpp  Semantics_TypeQualifiers.h  Semantics_TypeSpecifiers.cpp  Semantics_TypeSpecifiers.h  TypeChecker.cpp  TypeChecker.h  TypeResolver.cpp  (+1 more)
C/compilation/: Assembly.cpp  Assembly.h  Compilation.cpp  Compilation.h  SemanticModel.cpp  SemanticModel.h
C/compiler/: Binder.cpp  Binder.h  Compilation.cpp  Compilation.h  SemanticModel.cpp  SemanticModel.h  TypeChecker.cpp
C/infra/: List.h  Managed.cpp  Managed.h  MemoryPool.cpp  MemoryPool.h
C/names/: DeclarationName.cpp  DeclarationName.h  DeclarationNames.cpp  DeclarationNames.h
C/parser/: Binder.cpp  Binder.h  DiagnosticsReporter_Lexer.cpp  DiagnosticsReporter_Parser.cpp  DisambiguationCatalog.cpp  DisambiguationCatalog.h  DisambiguationCataloger.cpp  DisambiguationCatalogue.cpp  DisambiguationCatalogue.h  DisambiguationCataloguer.cpp  DisambiguationCataloguer.h  DisambiguationReparser.h  Disambiguator.cpp  Disambiguator.h  Keywords.cpp  LanguageDialect.cpp  LanguageDialect.h  LanguageExtensions.cpp  LanguageExtensions.h  LexedTokens.cpp  LexedTokens.h  Lexer.cpp  Lexer.h  LineDirective.cpp  LineDirective.h  MacroTranslations.cpp  MacroTranslations.h  ParseOptions.cpp  ParseOptions.h  Parser.cpp  Parser.h  Parser_Common.cpp  Parser_Declarations.cpp  Parser_Expressions.cpp  Parser_Statements.cpp  Parser__IMPL__.inc  PreprocessorOptions.cpp  PreprocessorOptions.h  TextCompleteness.h  TextPreprocessingSituation.h  (+3 more)
C/plugin-api/: DeclarationInterceptor.h  PluginConfig.h  SourceInspector.h  VisitorObserver.h
C/reparser/: DisambiguationCatalog.cpp  DisambiguationCatalog.h  DisambiguationCataloger.cpp  DisambiguationCataloger.h  Disambiguator.cpp  Disambiguator.h  Disambiguator_GuidelineImposition.cpp  Disambiguator_GuidelineImposition.h  Disambiguator_SyntaxCorrelation.cpp  Disambiguator_SyntaxCorrelation.h  Disambiguator_TypeSynonymsVerification.cpp  Disambiguator_TypeSynonymsVerification.h  NameCatalog.cpp  NameCatalog.h  NameCataloger.cpp  NameCataloger.h  Reparser.cpp  Reparser.h  Reparser_GuidelineImposition.h  Reparser_SyntaxCorrelation.cpp  Reparser_SyntaxCorrelation.h  Reparser_TypeSynonymsVerification.h
C/sema/: Compilation.cpp  Compilation.h  DeclarationBinder.cpp  DeclarationBinder.h  DeclarationBinder_Declarators.cpp  DeclarationBinder_End.cpp  DeclarationBinder_Specifiers.cpp  DeclarationBinder__MACROS__.inc  DiagnosticsReporter_DeclarationBinder.cpp  DiagnosticsReporter_TypeCanonicalizer.cpp  DiagnosticsReporter_TypeChecker.cpp  DiagnosticsReporter_TypeResolver.cpp  InferenceOptions.cpp  InferenceOptions.h  LegacyOptions.cpp  LegacyOptions.h  NameSpace.h  NameSpaces.h  PlatformOptions.cpp  PlatformOptions.h  Scope.cpp  Scope.h  ScopeKind.h  SemanticModel.cpp  SemanticModel.h  TypeCanonicalizer.cpp  TypeCanonicalizer.h  TypeChecker.cpp  TypeChecker.h  TypeInfo.cpp  TypeInfo.h  TypeResolver.cpp  TypeResolver.h  TypedefNameTypeResolver.cpp  TypedefNameTypeResolver.h
C/stdlib-support/: CMakeLists.txt  CnippetPlugin.cpp  StdLibIndex.cpp  StdLibIndex.h  StdLibInspector.cpp  StdLibInspector.h  StdLibInterceptor.cpp  StdLibInterceptor.h
C/symbols/: Accessibility.h  BuiltinKind.h  BuiltinTypeFacts.cpp  BuiltinTypeFacts.h  BuiltinTypeKind.h  DeclarationCategory.h  DeclarationKind.h  DeclarationSymbolKind.h  DeclarationSymbol_Function.cpp  DeclarationSymbol_Function.h  DeclarationSymbol_Object.cpp  DeclarationSymbol_Object.h  DeclarationSymbol_Type.cpp  DeclarationSymbol_Type.h  Declaration_Function.cpp  Declaration_Function.h  Declaration_Member.cpp  Declaration_Member.h  Declaration_Object.cpp  Declaration_Object.h  Declaration_Type.cpp  Declaration_Type.h  Declaration__IMPL__.inc  MIXIN_NameableDeclarationSymbol.cpp  MIXIN_NameableDeclarationSymbol.h  MIXIN_NameableSymbol.cpp  MIXIN_NameableSymbol.h  (+148 more)
common/: API.h  CMakeLists.txt
frontend/: AST.cpp  AST.h  ASTClone.cpp  ASTDotWriter.cpp  ASTDotWriter.h  ASTDumper.cpp  ASTDumper.h  ASTFwds.h  ASTIdentityMatcher.cpp  ASTIdentityMatcher.h  ASTMatch0.cpp  ASTMatcher.cpp  ASTMatcher.h  ASTNodeDumpers.inc  ASTNormalizer.cpp  ASTNormalizer.h  ASTPatternBuilder.h  ASTVisit.cpp  ASTVisitor.cpp  ASTVisitor.h  ASTfwd.h  Api.h  Bind.cpp  Bind.h  Binder.cpp  Binder.h  BuiltinNames.h  CMakeLists.txt  CPlusPlus.h  CPlusPlusForwardDeclarations.h  CSyntax.h  ConstraintSyntax.h  Control.cpp  Control.h  CoreTypes.cpp  CoreTypes.h  DiagnosticCollector.cpp  DiagnosticCollector.h  Dialect.h  ExpressionResolver.cpp  (+60 more)
solver/: psychecsolver.cabal  stack.yaml
stdlib-support/: CMakeLists.txt  CnippetPlugin.cpp  StdLibIndex.cpp  StdLibIndex.h  StdLibInspector.cpp  StdLibInspector.h  StdLibInterceptor.cpp  StdLibInterceptor.h
(+3553 files in other folders)
